# aa_examples

./: .gitignore  README.md
assets/: 4track_v1.ai  faust_rust_postfix.rs  faust_rust_prefix.rs
default/: Cargo.toml  default.json
default/.cargo/: config
default/src/: lib.rs
default/ui/: default.html
four_track/: Cargo.toml  four_track.json  four_track_gui_description.json
four_track/.cargo/: config
four_track/src/: lib.rs  playhead.rs
gain/: Cargo.toml  gain.json  gain.wasm
gain/dsp/: gain.dsp
gain/src/: lib.rs
gain/ui/: gain.html
muses/: muses.json  muses_gui_description.json
muses/ui/: debug.html  index.html
muses/ui/scripts/: aa.js  adsr.js  client.js  reflect_renderer.js  renderer.js  vector.js
muses/ui/scripts/lib/: build.js
nuke/: Cargo.toml  nuke.json  nuke_gui_description.json
nuke/dsp/: nuke.dsp
nuke/src/: lib.rs
nuke/ui/: debug.html  index.html
nuke/ui/scripts/: aa.js  adsr.js  client.js  renderer.js
reflect/: Cargo.toml  README.md  reflect.json  reflect_gui_description.json
reflect/dsp/: reflect.dsp
reflect/src/: lib.rs
reflect/ui/: debug.html  index.html
reflect/ui/scripts/: aa.js  client.js  renderer.js
root/: index.html  modules.json
root/js/: support.js
scripts/: create_faust2audioanywhere  faust2audioanywhere  gen_wasm.sh  map_2_float.py  package.sh
vl1/: Cargo.toml  vl1.json  vl1_gui_description.json
vl1/dsp/: ADSR.dsp  VL1.dsp
vl1/src/: lib.rs
vl1/ui/: debug.html  index.html
vl1/ui/scripts/: aa.js  buttons.js  client.js  renderer.js
vl1/ui/scripts/lib/: build.js
(+1 files in other folders)
