[package]
name = "four_track"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = "0.4.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"