[package]
name = "vl1"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"